k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nighteye-backend
spec:
  selector:
    matchLabels:
      component: nighteye-backend
  template:
    metadata:
      labels:
        component: nighteye-backend
    spec:
      containers:
        - name: nighteye-backend
          image: ghcr.io/rohankmr414/nighteye/backend:latest
          readinessProbe:
            httpGet:
              path: /healthx
              port: 8000
            initialDelaySeconds: 5
            timeoutSeconds: 2
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 5
            timeoutSeconds: 2
            periodSeconds: 10
            failureThreshold: 3
          ports:
            - containerPort: 8000
