k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nighteye-frontend
spec:
  selector:
    matchLabels:
      component: nighteye-frontend
  template:
    metadata:
      labels:
        component: nighteye-frontend
    spec:
      containers:
        - name: nighteye-frontend
          image: ghcr.io/rohankmr414/nighteye/frontend:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
