k8s/backend-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nighteye-backend-ip-service
spec:
  selector:
    component: nighteye-backend
  ports:
    - port: 8000
      targetPort: 8000
