k8s/frontend-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nighteye-frontend-ip-service
spec:
  selector:
    component: nighteye-frontend
  ports:
    - port: 80
      targetPort: 80
